# periPersonalSpace

./: .gitignore  CMakeLists.txt
app/conf/taxelsFiles/: taxels1D_45cmRF_skinV2_perfect_all.ini
app/scripts/: ppsAndReactControl_icub_redBall_new.xml
lib/src/: taxelPWE.cpp
modules/ppsAggregEventsForiCubGui/: ppsAggregEventsForiCubGui.cpp
modules/skinEventsAggregator/: skinEventsAggregThread.cpp  skinEventsAggregThread.h
modules/visuoTactileRF/: visuoTactileRF.cpp  vtRFThread.cpp  vtRFThread.h
modules/visuoTactileWrapper/: vtWThread.cpp  vtWThread.h
